--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= article.body %></td>
         <td><%= link_to 'Show', article %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Really delete the article?' } %></td>
       </tr>
     <% end %>
   </tbody>
